Bib update to preserve years.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -4,6 +4,7 @@ booktitle={Proc. of Signal-Image Technology and Internet-Based Systems (SITIS) 2
 title={Segmented Images Colorization Using Harmony}, 
 volume={}, 
 number={},
+year={2010}
 }
 
 @article{ODonovan,
@@ -19,6 +20,7 @@ number={},
  author = {Cohen-Or, Daniel and Sorkine, Olga and Gal, Ran and Leyvand, Tommer and Xu, Ying-Qing},
  title = {Color harmonization},
  booktitle = {Proc. SIGGRAPH 2006},
+ year={2006}
  }
 
 @book{Munsell,
@@ -49,36 +51,42 @@ journal = {Proceedings of the National Academy of Sciences}
  author = {Levin, Anat and Lischinski, Dani and Weiss, Yair},
  title = {Colorization using optimization},
  booktitle = {Proc. SIGGRAPH 2004},
+ year={2004}
  }
 
 @inproceedings{TransferColorization,
  author = {Welsh, Tomihisa and Ashikhmin, Michael and Mueller, Klaus},
  title = {Transferring color to greyscale images},
  booktitle = {Proc. SIGGRAPH 2002},
+ year={2002}
 }
 
 @inproceedings{MultimodalColorization,
  author = {Charpiat, Guillaume and Hofmann, Matthias and Sch\"{o}lkopf, Bernhard},
  title = {Automatic Image Colorization Via Multimodal Predictions},
  booktitle = {Proc. ECCV 2008},
+ year={2008}
 } 
 
 @inproceedings{DressUp,
  author = {Yu, Lap-Fai and Yeung, Sai-Kit and Terzopoulos, Demetri and Chan, Tony F.},
  title = {DressUp!: outfit synthesis through automatic optimization},
  booktitle = {Proc. SIGGRAPH Asia 2012},
+ year={2012}
 } 
 
 @inproceedings{MaterialMemex,
  author = {Jain, Arjun and Thorm\"{a}hlen, Thorsten and Ritschel, Tobias and Seidel, Hans-Peter},
- booktitle = {Material memex: automatic material suggestions for 3D objects},
+ title = {Material memex: automatic material suggestions for 3D objects},
  booktitle = {Proc. SIGGRAPH Asia 2012},
+ year={2012}
 }
 
 @INPROCEEDINGS{Factorie,
     author = {Andrew Mccallum and Karl Schultz and Sameer Singh},
     title = {Factorie: Probabilistic programming via imperatively defined factor graphs},
     booktitle = {Proc. NIPS 2009},
+    year={2009}
 }
 
 @article{Hastings,
@@ -121,6 +129,7 @@ journal = {Biometrika}
  author = {Carbonell, Jaime and Goldstein, Jade},
  title = {The use of MMR, diversity-based reranking for reordering documents and producing summaries},
  booktitle = {Proc. ACM SIGIR 1998}
+ year={1998}
 } 
 
 @article{TruncatedGaussians,
@@ -177,6 +186,7 @@ language={English}
   title={Color naming models for color selection, image editing and palette design},
   author={Heer, J. and Stone, M.},
   booktitle={Proc. ACM CHI 2012},
+  year={2012}
 }
 
 @article{AlbersInteractionOfColor,
@@ -192,6 +202,7 @@ language={English}
  author = {Wang, Baoyuan and Yu, Yizhou and Wong, Tien-Tsin and Chen, Chun and Xu, Ying-Qing},
  title = {Data-driven image color theme enhancement},
  booktitle = {Proc. SIGGRAPH Asia 2010},
+ year={2010}
 } 
 
 @ARTICLE{FactorGraphs,
@@ -217,6 +228,7 @@ language={English}
  author = {Merrell, Paul and Schkufza, Eric and Li, Zeyang and Agrawala, Maneesh and Koltun, Vladlen},
  title = {Interactive furniture layout using interior design guidelines},
  booktitle = {Proc. SIGGRAPH 2011},
+ year={2011}
 } 
 
 @inproceedings{HamiltonianMCMC,
@@ -237,6 +249,7 @@ language={English}
 author={Eitz, Mathias and Hays, James and Alexa, Marc},
 title={How Do Humans Sketch Objects?},
 booktitle={Proc. SIGGRAPH 2012},
+year={2012}
 }
 
 @article{ReversibleJumpMCMC,
@@ -265,9 +278,9 @@ journal = {Biometrika}
 
 @article{YiTingTiledPatterns,
   author={Yi-Ting Yeh and Katherine Breeden and Lingfeng Yang and Matthew Fisher and Pat Hanrahan },
+  year={2012},
   title={Synthesis of Tiled Patterns Using Factor Graphs},
   journal={ACM Transactions on Graphics},
-  year={2012},
 }
 
 @article{SceneSynth,
@@ -349,6 +362,7 @@ author={Hinton, Geoffrey E.},
  author = {Yeh, Yi-Ting and Yang, Lingfeng and Watson, Matthew and Goodman, Noah D. and Hanrahan, Pat},
  title = {Synthesizing open worlds with constraints using locally annealed reversible jump MCMC},
  booktitle = {Proc. SIGGRAPH 2012},
+ year={2012}
  }
 
 @article{CIEDE2000,
