Fixed small bug in bibtex.

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -128,7 +128,7 @@ journal = {Biometrika}
 @inproceedings{MMR,
  author = {Carbonell, Jaime and Goldstein, Jade},
  title = {The use of MMR, diversity-based reranking for reordering documents and producing summaries},
- booktitle = {Proc. ACM SIGIR 1998}
+ booktitle = {Proc. ACM SIGIR 1998},
  year={1998}
 } 
 
