Raised box and citation fix.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -35,7 +35,7 @@ Figure~\ref{fig:photographMatching} shows an example where colors from two photo
 
 \begin{figure*}[ht!]
 \begin{tabular}{ccc}
-\includegraphics[width=.15\linewidth]{figs/permutationTemplateBird} & \includegraphics[width=.39\linewidth]{figs/permutationBest3} & \includegraphics[width=.39\linewidth]{figs/permutationWorst3} %& \includegraphics[width=.12\linewidth]{figs/permutationArtist}
+\raisebox{1.2em}{\includegraphics[width=.15\linewidth]{figs/permutationTemplateBird}} & \includegraphics[width=.39\linewidth]{figs/permutationBest3} & \includegraphics[width=.39\linewidth]{figs/permutationWorst3} %& \includegraphics[width=.12\linewidth]{figs/permutationArtist}
   \\
 \textbf{(a)} Input Palettes & \textbf{(b)} Highest-scoring assignments & \textbf{(c)} Lowest-scoring assignments %& \textbf{(d)} Artist assignment
 \\
