--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -1,10 +1,10 @@
 @INPROCEEDINGS{ColorizationUsingHarmony, 
 author={Sauvaget, C. and Manuel, S. and Vittaut, J.-N. and Suarez, J. and Boyer, V.}, 
-booktitle={Proc. of Signal-Image Technology and Internet-Based Systems (SITIS) 2010}}, 
+year={2010},
+booktitle={Proc. of Signal-Image Technology and Internet-Based Systems (SITIS) 2010}, 
 title={Segmented Images Colorization Using Harmony}, 
-volume={}, 
-number={},
-year={2010}
+volume={1}, 
+number={1},
 }
 
 @article{ODonovan,
