oops, ok fixed new reference

--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -16,13 +16,12 @@ number={1},
   year={2011},
 }
 
-@misc{Itten,
+@book{Itten,
   title={The Art of Color: The Subjective Experience and Objective Rationale of Color},
   author={Itten, J.},
-  year={1973},
+  year={1974},
   publisher={Wiley}
 }
-
 @inproceedings{CohenOrHarmonization,
  author = {Cohen-Or, Daniel and Sorkine, Olga and Gal, Ran and Leyvand, Tommer and Xu, Ying-Qing},
  title = {Color harmonization},
