Fixed some typos and bad references.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -57,7 +57,7 @@ Initial automatic suggestions & After fixing the stem to be green\\
 \end{figure*}
 
 
-Although using a pleasing palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation}, shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern from our model. These palettes were originally created by artists beforehand either from scratch or from a photograph, and were actually applied to this pattern on COLOURlovers. Our model ranks the original artist-created color assignments as 39st (top palette) and 21st (bottom palette) out of 120 possible permutations. This suggests that the model may be capturing general artist trends in pattern coloring.
+Although using a pleasing palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation}, shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern from our model. These palettes were originally created by artists beforehand either from scratch or from a photograph, and were actually applied to this pattern on COLOURlovers. Our model ranks the original artist-created color assignments as 39th (top palette) and 21st (bottom palette) out of 120 possible permutations. This suggests that the model may be capturing general artist trends in pattern coloring.
 
 In this example, the model terms that most distinguish the 3 highest-scoring assignments from the 3 lowest-scoring assignments are the group and segment color name counts. Our model prefers colors like yellow, grey, and green to red-orange and orange-brown for background colors. Assignments with these orange background colors tend to be ranked the lowest. This may be because there are few popular patterns with orange backgrounds in our training set.
 
