Added more distinguishing terms

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -15,7 +15,7 @@ People can color patterns with a variety of different criteria in mind, which ma
 
 \paragraph{Coloring with fixed palettes} 
 
-Artists often draw inspiration from inspirational photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors do different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
+Artists often draw inspiration from inspirational photographs and existing color themes and may have specific colors in mind when coloring in a pattern. Even with a fixed color palette, mapping different colors to different regions leads to a range of possible images, some more desirable than others. We can use our model's score to rank all possible permutations of the palette colors (excluding the color compatibility factor).
 
 Figure~\ref{fig:photographMatching} shows an example where colors from two photographs are applied to different pattern templates. A color palette is first automatically extracted from the input photograph~\cite{SharonPaletteExtraction}. Our algorithm then automatically computes a pleasing mapping from the colors in the extracted palette to regions in a given pattern template.~\remark{Comment on e.g. why does it use white for the background?} 
 
@@ -57,14 +57,14 @@ Initial automatic suggestions & After fixing the stem to be green\\
 \end{figure*}
 
 
-Although using a well-designed color palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation} shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern using those palettes. The palettes were originally created by artists beforehand either from scratch or from a photograph, and were actually applied to this pattern on COLOURlovers. Our model ranks the original artist-created color assignments as 39st (top palette) and 21st (bottom palette) out of 120 possible permutations. This suggests that the model may be capturing general artist trends in pattern coloring.
+Although using a well-designed color palette often improves the look of a pattern, the spatial arrangement of those colors can make a dramatic difference in appearance. Figure~\ref{fig:permutation} shows two input color palettes for the bird pattern and the highest and lowest-scoring color assignments to the pattern using those palettes. The palettes shown in the figure were originally used by artists to color in this pattern on COLOURlovers. Because the pattern has 5 color groups, there are 120 possible color assignment permutations for any given 5-color palette. Our model ranks the original artist-created color assignments as 39th (for the first palette) and 21st (for the second palette) out of the 120 possible permutations. Over a larger sampling of 188 patterns, artist-created coloring assignments rank in the top 40\%. This suggests that the model may be capturing general artist trends in pattern coloring, though there may be aesthetic and stylistic variations among individual artists that are not well predicted by a single model.
 
-In this example, the model terms that most distinguish the 3 highest-scoring assignments from the 3 lowest-scoring assignments are the group and segment color name counts. Our model prefers colors such as yellow, grey, and green to red-orange and orange-brown for background colors. Assignments with these orange background colors tend to be ranked the lowest. This may be because there are few popular patterns with orange backgrounds in our training set.
+In this example, the model terms that most distinguish the 3 highest-scoring assignments from the 3 lowest-scoring assignments are the group and segment color name counts. Our model prefers colors such as yellow, grey, and green to red-orange and orange-brown for background colors. Assignments with these orange background colors tend to be ranked the lowest. This may be because there are few popular patterns with orange backgrounds in our training set. Other distinguishing terms include perceptual difference between adjacent regions. Our model predicts that the foreground regions should more perceptually distinct from the background than from other foreground regions. Thus, it tends to assign the most distinct color in the palette to the background region.
 
 
 \paragraph{Hard color constraints}
 
-In some cases, a user may only have partial knowledge about the colors she wants to see in particular pattern regions. Our model can assist users in this situation by fixing the color of certain pattern regions and using conditional inference to sample values for the remaining unconstrained color variables. Figure~\ref{fig:constrainedInference} shows an example. After viewing an initial set of coloring suggestions, the user decides she wants to see more results where the stem of the plant is a particular shade of green. Our system outputs new suggestions subject to this constraint.~\remark{Comment on the effect this has (i.e. it makes other regions more likely to also be green, etc.)}
+In some cases, a user may only have partial knowledge about the colors she wants to see in particular pattern regions. Our model assists this situation by allowing users to fix the colors of certain pattern regions. The system then uses conditional inference to sample values for the remaining unconstrained color variables. Figure~\ref{fig:constrainedInference} shows an example. After viewing an initial set of coloring suggestions, the user decides she wants to see more results where the stem of the plant is a particular shade of green. Our system outputs new suggestions subject to this constraint.~\remark{Comment on the effect this has (i.e. it makes other regions more likely to also be green, etc.)}
 
 \paragraph{Soft color constraints}
 
