Typo fixes and such.

--- a/latex/siggraph2013/background.tex
+++ b/latex/siggraph2013/background.tex
@@ -15,7 +15,7 @@ Computer graphics, aesthetics, and psychology research has introduced theories a
 Our model includes this compatibility function. However, as we demonstrate in Section~\ref{sec:approach}, this term alone is insufficient to produce good colorings, as it does not take into account the spatial role each color plays in the pattern. Thus, our model also uses the distinguishing features of each pattern region and the relationships between regions to constrain the space of colorings that it will suggest.
 
 \paragraph{Natural image colorization}
-While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images~\cite{ScribbleColorization,TransferColorization}. The most automatic of these methods builds distributions of color variability given local texture descriptors, combines them into one energy function, and minimizes it using a graph cut algorithm. Our model employs similar local color distributions but bases them on features of pattern regions, rather than photographic texture patches. We also cast the problem of finding good colorizations as one of probabilistic inference, rather than optimization. This framing allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut yields only a single global optimum.
+While there is little work directly addressing pattern colorization, researchers have developed many approaches to colorizing grayscale photographic images~\cite{ScribbleColorization,TransferColorization}. The most automatic of these methods builds distributions of color variability given local texture descriptors, combines them into one energy function, and minimizes it using a graph cut algorithm~\cite{MultimodalColorization}. Our model employs similar local color distributions but bases them on features of pattern regions, rather than photographic texture patches. We also cast the problem of finding good colorizations as one of probabilistic inference, rather than optimization. This framing allows our algorithm to explore the space of colorings and suggest multiple good alternatives, whereas a graph cut yields only a single global optimum.
 
 \paragraph{3D model colorization}
 Other recent work has tackled automatic coloring of 3D objects. The DressUp! system suggests plausible outfits---including colors for each clothing item---for virtual characters~\cite{DressUp}. It also employs the color compatibility function of O'Donovan et al.~\shortcite{ODonovan} as part of a probabilistic model, but it does not consider the spatiality of color beyond a top-to-bottom ordering. The Material Memex system models the context-dependent correlation between geometric shape and material properties of 3D object parts~\cite{MaterialMemex}. In a related fashion, the system presented in this paper models the context-dependent correlation between pattern regions and color properties of those regions. The Material Memex does not include any explicit consideration of color compatibility. Additionally, its use of multinomial factors requires a quantization of material configuration space. Since it does not consider colors separately from materials, this quantization can restrict the set of colors the model can possibly suggest. In contrast, our model uses continuous probability distributions.
