--- a/latex/siggraph2013/dataset.tex
+++ b/latex/siggraph2013/dataset.tex
@@ -1,8 +1,8 @@
 \section{Dataset}
 \label{sec:dataset}
 
-To build our data-driven model, we used a dataset of colored patterns collected from COLOURlovers, an online community centered around creating and sharing color designs. Artists and enthusiasts can create colored patterns by either creating a template from scratch or coloring an existing template. 
+To build our data-driven model, we use a dataset of colored patterns collected from COLOURlovers, an online community centered around creating and sharing color designs. Artists and enthusiasts can create colored patterns by creating a template from scratch or by coloring an existing template. 
 
-The scraped dataset contains 100 colored patterns for each of 82 artists---8200 colored patterns in total spread over 2908 unique pattern templates. We chose artists in order of their most popular pattern and if he or she had created at least 100 patterns total. The supplemental materials contain the complete list of patterns in our dataset.
+Our dataset contains 100 colored patterns for each of 82 artists---8200 colored patterns in total spread over 2908 unique pattern templates. We chose artists in order of their most popular pattern and if he or she had created at least 100 patterns total. The supplemental materials contain the complete list of patterns in our dataset.
 
-The patterns originated vector images, where each region is mapped to a color in a source color palette. However, our dataset only contains rasterized patterns, which is the only format freely available on the website. Thus, we must pre-process the rasterized patterns in order to create pattern templates for training. We first map each pixel to a color in the source palette. To reduce quantization noise, we examine the closest palette colors in the 8x8 neighborhood for each pixel, and map that pixel to the mode color. We group all connected components under a threshold size (0.05\% image size) into one `noise' segment. Each other pattern segment is defined as a set of connected components that are 2 pixels or closer to each other, to account for noise. Finally, we create color groups from segments with the same palette color.
+These patterns originated as vector images, where each region is mapped to a color in a source color palette. However, our dataset only contains rasterized patterns, which is the only format COLOURlovers makes available to the public. Thus, we must pre-process the rasterized patterns to create pattern templates for training. We first map each pixel to a color in the source palette. To reduce quantization noise, we examine the closest palette colors in the 8x8 neighborhood for each pixel, and map that pixel to the mode color. We group all connected components under a threshold size (0.05\% image size) into one `noise' segment. Each other pattern segment is defined as a set of connected components that are 2 pixels or closer to each other, to account for noise. Finally, we create color groups from segments with the same palette color.
