--- a/latex/siggraph2013/discussion.tex
+++ b/latex/siggraph2013/discussion.tex
@@ -12,7 +12,7 @@ One limitation of the current model is that it does not encode any semantic cons
 %, as shown in Figure~\ref{fig:badFlowers}.
 Labeling regions with semantic tags could address this problem, as the system could search for images on the web using these tags and build up a distribution of expected colors. It might also be possible to predict such labels automatically using sketch classification techniques~\cite{SketchClassification}.
 
-In addition, some of COLOURlovers pattern templates use extensive color blending in their original vector artwork. For these patterns, the rasterized image is a poor approximation to the original artwork, and our model may not capture very predictive spatial features (or it may capture the wrong ones). In the future, we would like to apply our model to a dataset of vector patterns.
+In addition, some COLOURlovers pattern templates use extensive color blending in their original vector artwork. For these patterns, the rasterized image is a poor approximation to the original artwork, and our model may not capture very predictive spatial features (or it may capture the wrong ones). In the future, we would like to apply our model to a dataset of vector patterns.
 
 %~\remark{Other limitations/insights we may want to mention (at some point in the paper; it doesn't have to be here): (1) The fuzzy nature of probabilistic models means they may overshoot `hard' constraints that the viewer expects to be satisfied (e.g. some minimum contrast between adjacent regions). (2) For images that use blending extensively, the raster image is a poor approximation to the source vector artwork, and our model may not capture the features very well (or may capture the wrong ones). (3) Training simultaneously on many artists with different styles can yield `muted' results, as the model isn't confident about anything.}
 
