--- a/latex/siggraph2013/binary.tex
+++ b/latex/siggraph2013/binary.tex
@@ -12,8 +12,8 @@ As with individual pattern regions, there are many possible properties of the co
 \begin{description}
 	\item[Perceptual Difference] is the Euclidean distance between two colors in \lab space and is the primary descriptor of `contrast' between two colors that we use in our model. This distance metric is simple and efficient to evaluate; more sophisticated formulae have also been proposed~\cite{CIEDE2000}.
 	\item[Relative Lightness] is the absolute difference between the L values of two colors in \lab space. This `difference of intensities' captures another important type of contrast between two colors.
-	\item[Relative Colorfulness] is the absolute difference between the colorfulness values of two two colors, using the definition of colorfulness from Section~\ref{sec:unary}. This property helps capture whether or not two colors should be mutually saturated/desaturated
-	\item[Chroma Difference] is the squared fraction of perceptual distance due to the \lab chroma channels: $\frac{\delta a^2+\delta b^2}{\delta a^2+\delta b^2+\delta L^2}$. This value measures the difference between two colors after factoring out lightness.
+	\item[Relative Saturation] is the absolute difference between the saturation values of two two colors, using the definition from Section~\ref{sec:unary}. This property helps capture whether or not two colors should be mutually saturated/desaturated
+	\item[Chromatic Difference] is the squared fraction of perceptual distance due to the \lab chroma channels: $\frac{\delta a^2+\delta b^2}{\delta a^2+\delta b^2+\delta L^2}$. This value measures the difference between two colors after factoring out lightness.
 	\item[Color Name Similarity] is the cosine similarity between the color name count vectors defined in Section~\ref{sec:unary}~\cite{ColorNamingModels}. This measure assesses whether two colors are typically referred to with the same set of names.
 \end{description}
 %%%
@@ -37,7 +37,7 @@ For a particular pair of adjacent segments $(\segment, \segprime)$ and a color p
 %%
 where $\adjStrength(\segment,\segprime)$ is the \emph{strength} of the adjacency $(\segment,\segprime)$. We define adjacency strength as the number of pixels from segments $\segment$ or $\segprime$ that are within a 2-pixel distance from their perimeters. All adjacency strengths in a given pattern are normalized to sum to 1. We learn the distributions $p$ using the `histogram regression' approach described in Section~\ref{sec:unary}.
 
-Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative lightness for two different adjacent segment pairs. The two distributions are similar in shape and reflect the intution that no two adjacent segments should be completely equi-luminant. However, the foreground-background adjacency between the kite and the sky concentrates more of its mass toward higher lightness differences. Together, these two distributions suggest that foreground-background adjacencies should exhibit more lightness contrast than foreground-foreground adjacencies.
+Figure~\ref{fig:binaryHistograms} shows predicted distributions over relative lightness for two different adjacent segment pairs. The two distributions are similar in shape and reflect the intuition that no two adjacent segments should be completely equi-luminant. However, the foreground-background adjacency between the kite and the sky concentrates more of its mass toward higher lightness differences. Together, these two distributions suggest that foreground-background adjacencies should exhibit more lightness contrast than foreground-foreground adjacencies.
 
 \begin{figure}[ht]
 \begin{tabular}{cc}
