--- a/latex/siggraph2013/colorCompat.tex
+++ b/latex/siggraph2013/colorCompat.tex
@@ -1,7 +1,7 @@
 \section{Color Compatibility Function}
 \label{sec:colorCompat}
 
-The unary and binary coloring scoring functions defined in the previous sections indicate whether an individual pattern region is well-colored or whether two adjacent regions are colored well in concert, but they have no knowledge of the global harmony between all colors in the pattern. To enforce global consistency, we include a color compatibility function based on the model introduced by O'Donovan et al.~\shortcite{ODonovan}. Their model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
+The unary and binary color scoring functions defined in the previous sections indicate whether an individual pattern region is well-colored or whether two adjacent regions are colored well in concert, but they have no knowledge of the global harmony between all colors in the pattern. To enforce global consistency, we include a color compatibility function based on the model introduced by O'Donovan et al.~\shortcite{ODonovan}. Their model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
 
 We extract such a color theme from a pattern by taking the colors of the five largest color groups and ordering them by size. If the pattern contains fewer than five color groups, we repeat colors in order of size to fill the rest of the theme. Inspection of these extracted themes revealed that size-ordering of colors tends to produce themes that are rated higher than random orderings but lower than the optimal ordering. Additionally, ordering has little effect on discriminative power: in general, low-scoring themes are rated lower than high-scoring themes, regardless of permutation.
 
