Simplifying evaluation analysis description

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -157,7 +157,7 @@ We also add a factor to the pattern's background color group that penalizes simi
 \factor^\textrm{BgPen}(\colors_{\textrm{largest}(\groups)} | \webpage) = 0.05 \cdot || \colors_{\textrm{largest}(\groups)} - \textrm{bgColor}(\webpage) ||
 \end{equation*}
 %%
-This term ensures that the body of the page stands out from the rest of the page. A more sophisticated approach would treat the entire web page as a pattern and perform joint recoloring; we leave this extension to future work.
+This term ensures that the body of the page does not blend into the patterned background. A more sophisticated approach would treat the entire web page as a pattern and perform joint recoloring; we leave this extension to future work.
 
 
 \begin{figure}[ht]
