Extra space in some results figures.

--- a/latex/siggraph2013/results.tex
+++ b/latex/siggraph2013/results.tex
@@ -165,6 +165,7 @@ This term ensures that the body of the page does not blend into the patterned ba
 \includegraphics[width=\columnwidth]{figs/webpageRecoloring}
 \caption{With a few additional factors, our model can recolor the background pattern of a web page to match the colors in the page body.}
 \label{fig:webpageRecoloring}
+\vspace{-1.0em}
 \end{figure}
 
 \paragraph{3D scene design}
@@ -192,6 +193,7 @@ Our model can also adapt the colorings of clothing items to fit different people
 \includegraphics[width=\columnwidth]{figs/fashion/composite}
 \caption{Using our model to colorize a patterned shirt for different people. The hair, skin, eye, and lip colors are treated as fixed constraints, which encourage the model to produce compatible colorings via adjacencies and long-range dependencies.}
 \label{fig:fashion}
+\vspace{-1.0em}
 \end{figure}
 
 \subsection{Performance}
