--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -14,7 +14,7 @@ We first generate coloring suggestions from four different sources----\artistSou
 
 The study interface presents participants with a randomized grid of all 16 coloring suggestions for a pattern template. Participants are asked to chose the 4 colorings they like the most and the 4 they like the least from the grid before moving on to the next template. Each participant responds to 5 pattern templates randomly drawn from the pool of 15 and presented in random order. One template is presented twice to check for participant consistency.
 
-Figure ~\ref{fig:study} shows the percentage of suggestions from each source that particpants chose as a `Top 4' or `Bottom 4' pattern. When counting, we do not include suggestions from the replicated template. We use binomial regression to model the odds of each source being chosen as either a `Top 4' or `Bottom 4' suggestion. Tukey all-pair comparison tests show that all differences are significant ($p < 0.01$), except for the odds that an \artistSource~suggestion will be chosen as a `Bottom 4' suggestion versus a \modelSource~suggestion. \artistSource~patterns are selected most often as a `Top 4' pattern, with our \modelSource~patterns selected second most often. In addition, \modelSource~patterns are selected least as a `Bottom 4' pattern, along with \artistSource~patterns.
+Figure ~\ref{fig:study} shows the percentage of suggestions from each source that particpants chose as a `Top 4' or `Bottom 4' pattern. When counting, we do not include suggestions from the replicated template. Logistic regression shows that the source of a suggestion significantly affects the chances that it will be chosen as either `Top 4' or `Bottom 4' coloring. Tukey all-pair comparison tests show that all differences are significant ($p < 0.01$), except for the odds that an \artistSource~suggestion will be chosen as a `Bottom 4' suggestion versus a \modelSource~suggestion. \artistSource~patterns are selected most often as a `Top 4' pattern, with our \modelSource~patterns selected second most often. In addition, \modelSource~patterns are selected least as a `Bottom 4' pattern, along with \artistSource~patterns.
 
 \begin{figure}[h!]
   \begin{center}
