Final figure placement.

--- a/latex/siggraph2013/patternColoring.tex
+++ b/latex/siggraph2013/patternColoring.tex
@@ -106,6 +106,8 @@
 \input{macros.tex}
 \input{notation.tex}
 
+\widowpenalty=500
+
 \begin{document}
 
 %%% A ``teaser'' image appears under the title and affiliation information,
